--- a/src/index.css
+++ b/src/index.css
@@ -64,18 +64,23 @@ p {
   line-height: 1.5rem;
 }
 
+ul {  
+  justify-content: space-between;
+  list-style-type: disc;
+}
+
 li {
   color: var(--blue-1000);
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 500;
-  line-height: 2rem;
+  margin: 1rem;
 }
+
 
 span {
   color: var(--blue-1000);
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 1000;
-  line-height: 2rem;
 }
 
 label {
